05-Ingress/solutions/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cert # name from cluster-issuer
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect@kubernetescrd
spec:
  rules:
  - host: william.codemash.otherdevopsgene.dev # replace william with your username
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: productpage
            port:
              number: 9080
      - path: /reviews
        pathType: Prefix
        backend:
          service:
            name: reviews
            port:
              number: 9080
      - path: /details
        pathType: Prefix
        backend:
          service:
            name: details
            port:
              number: 9080
  tls:
  - hosts:
    - william.codemash.otherdevopsgene.dev # replace william with your username
    secretName: acme-tls-cert
